# Hermes-chat

./: .gitignore  README.md  bridge.py  package-lock.json  package.json  start.sh  stop.sh
.opencode/skills/gitea-upload/: SKILL.md
nats/: nats.conf
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: index.html
