[package]
name = "hermes-chat"
version = "0.1.0"
description = "Hermes WebChat - Desktop App"
authors = [""]
edition = "2021"

[lib]
name = "hermes_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
